--- a/gb/24/6/29/n14280446.md
+++ b/gb/24/6/29/n14280446.md
@@ -23,7 +23,7 @@
 <p>我们接下来继续看美国陆军的测试内容。在这次测试中，无人海马斯在连续火力任务中发射了三枚练习火箭弹。总共成功发射了六枚。这证明发射器能够在人类监督下自主机动，从隐藏位置驶向发射点，转向指定方位，并执行火控和开炮命令。</p>
 <p>这套无人发射系统AML使用的武器装备，和海马斯相同，能够发射全套的227毫米火箭弹，包括精确制导火箭弹、陆军战术导弹和美国全新开发的PRSM精确打击导弹。</p>
 <p>而美国陆军开发的PRSM导弹，基本版本射程达到500公里，而后开发的反舰版本和增城版本，射程能达到1000公里，并且能攻击海上移动目标。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WmJj_3e_Y40" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a title="YouTube video player" src=""></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WmJj_3e_Y40" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>美国导弹发射载具将实现无人化</h2>
 <p>美国当时开发海马斯系统时，着重强调它的高机动性，首先它可以由C130运输机运输，快速到达世界上任何角落，之后能够迅速进入战斗位置，并完成战斗任务。</p>
 <p>现在新型的无人海马斯AML将完全继承海马斯的这一优点，我们设想一下未来战争情景。如果在西太平洋地区发生冲突，距离美国十万八千里，由海陆运输路途遥远。这个时候美国可以出动C130运输机，运输无人海马斯系统，抵达菲律宾日本的相关军事基地。而无人海马斯将能够发射射程达1000公里的PRSM精确打击导弹，这将大大提高美国的区域拒止能力。</p>
@@ -36,42 +36,49 @@
 <p>讲到这里有的朋友会好奇，那么坦克步兵战车也会很快无人化吗？我个人认为，这些直接面对敌人的武器装备，它们的无人化和人工智慧化将是接下来的一步。为什么呢？原因很简单，它们的应用场景不同。我们仔细想一想，海马斯发射车，它不需要直接面对敌人，它所需要做的很简单，就是行驶到特定的位置，然后操纵自己的机电系统，实现调整方向定位，之后向某一个具体坐标的敌人发射导弹就可以了。</p>
 <p>可是坦克和步兵战车的应用场景就更为复杂，在战场上有敌人，有自己人，还有平民，如何行驶规避目标，并且在何种情况下发射武器这将是比较有难度的。当然，这个项目其实美国也在进行，将人工智慧和计算机视觉等技术和M1埃布拉姆斯结合，这个技术我们之后会和大家介绍，它其实是借助人工智慧辅助军人做出决策，并不是完全的替代战士。</p>
 <p>我们可以看到的是，自2019年以来，美国三军在各个项目上重点研发无人技术，美国空军的F-16战斗机已经实现无人化，美国陆军的海马斯也要实现无人化，而在海上，美国已经服役了无人舰船，波音研发的虎鲸无人潜艇也已经服役。可以看到，在人工智慧和武器无人化方向上，美国走在了世界最前沿，套用华为的一句宣传语，那是遥遥领先。</p>
-<p>订阅YouTube频道：<ahref=""></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw">"></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw</a><br />
-订阅Youmaker频道：<ahref=""></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo">"></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo</a>?<br />
-订阅<ahref="https://cn.epochtimes.com/gb/tag/%e6%8e%a2%e7%b4%a2%e6%99%82%e5%88%86.md#1">探索时分</a>Telegram群组：<ahref="https://t.me/jiemishifenchannel">https://t.me/jiemishifenchannel</a></p>
-<p>《<ahref=""></a><a href="https://d27hok1oawuvj8.cloudfront.net/R6o2qJA9e"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw" target="_blank" rel="noopener noreferrer">探索时分</a>》节目组制作</p>
+<p>订阅YouTube频道：<ahref=""></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw">"></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw</a><br />
+订阅Youmaker频道：<ahref=""></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo">"></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/c/tansuo</a>?<br />
+订阅<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%8e%a2%e7%b4%a2%e6%99%82%e5%88%86.md#1">探索时分</a>Telegram群组：<ahref="https://t.me/jiemishifenchannel">https://t.me/jiemishifenchannel</a></p>
+<p>《<ahref=""></a><a href="https://dycg1eql8aigr.cloudfront.net/S5rWpqgAw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UCivjPE-4XnyqBBuxhXshSAw" target="_blank" rel="noopener noreferrer">探索时分</a>》节目组制作</p>
 <p>责任编辑：李昊#</p>
+<div class="related-article" style="display: block;"><span style="color: #000;font-weight:bold;">推荐阅读：</span></div>
+<ul class="related-posts"style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270126.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">为何俄罗斯不愿让Su-57战机参与乌战</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/14/n14202402.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">【探索时分】俄罗斯两年才摧毁首辆海马斯</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269961.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">【新闻五人行】美爆“地狱计划”吓坏中南海</a></span></li>
+<li><span style="font-weight:bold;display: inline-block;"><a style="color: #0000ff; " href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270463.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener">G7公报出炉 从六个方面明确对华立场</a></span></li>
+</ul>
 	
 <hr>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/3/21/n8950039.md#1">这个世代一定要看的电影（1）《脑筋急转弯》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/7/22/n9452281.md#1">爆笑脑筋急转弯</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/14/n13088476.md#1">《脑筋急转弯》是真的！ 肠道菌影响小鼠社交行为</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113920.md#1">皮克斯《脑筋急转弯2》预告 莱莉出现新焦虑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237824.md#1">【探索时分】乌克兰ATACMS摧毁俄最强S-400</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/13/n14248899.md#1">【探索时分】俄罗斯三万军队猛攻哈尔科夫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/15/n14251064.md#1">【探索时分】沃尔昌斯克告急 俄罗斯加大攻势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254391.md#1">【探索时分】92突击旅抵达前线 俄军进攻受阻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/12/n7547010.md#1" target="_blank">人生绝望疑无路 修法轮功获重生</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279167.md#1">【新闻大家谈】拜登川普2024首场辩论 火花再现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280446.md#1">【探索时分】全新无人海马斯三种模式 震撼来袭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278853.md#1">美航母打击群视频披露红海前线激战场景</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279172.md#1">李尚福遭公开处理 秦刚命运留悬念</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14278994.md#1">【秦鹏观察】李尚福被开内幕曝光 李强讲话被删</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279680.md#1">杨颖试水复出疑失败 节目头像被打马赛克</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279240.md#1">《名侦探柯南 100万美元的五棱星》影评：怪盗的目标这回是宝刀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278909.md#1">黄子韬谈经纪人被抓：演唱会对我是一种阴影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279870.md#1">金曲35完整名单 歌王MC HotDog热狗歌后孙盛希</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278023.md#1">章子怡疑不满新片戏份被剪？受访片段引揣测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279211.md#1">奇特的旅游新趋势：搭机时什么事都不做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274200.md#1">预防中暑吃什么？黄瓜清热消暑 又可减肥</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277807.md#1">茄子营养价值高 教你不吸油的茄子烹饪方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14275941.md#1">造成人体不舒服、生病的六种邪气（下）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286821.md#1">【晚间新闻】美国会议长：推动全面抗中共法案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286981.md#1">【菁英论坛】冲击人类多方面 AI发展遇瓶颈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287904.md#1">【时事金扫描】北京玩一石几鸟 北约瞄准亚太</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285774.md#1">躺不平卷不动 中国多地出现“青年养老院”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282494.md#1">2024年最好的14款日本车 本田思域居首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284641.md#1">抢先看 苹果新一代iPhone16带来何种变化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286463.md#1">孙俪自曝被夸“天选打工人” 帖文引两极论战</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287232.md#1">武打明星钱小豪被传疾病缠身 暴瘦近照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286087.md#1">《加菲猫：农场大冒险》优于旧作 7月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14285855.md#1">《神偷奶爸4》北美票房登冠 《脑筋急转弯2》让位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286090.md#1">Lia将重启活动 直播落泪感谢ITZY成员与粉丝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286069.md#1">为何飞机从起点到终点的飞行路线非一直线？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264016.md#1">午觉睡太久 小心失智 心血管疾病上身！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14286686.md#1">考场天花板很高 竟会让学生考试成绩变差？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285431.md#1">10方法升级玉米罐头 轻松享有粗粮美食</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/29/n14280446.htm">【探索时分】全新无人海马斯三种模式 震撼来袭</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/29/n14280446.htm">【探索时分】全新无人海马斯三种模式 震撼来袭</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280446.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
